Fixed overflowed display

--- a/calculator.css
+++ b/calculator.css
@@ -55,6 +55,10 @@
     font-size: 1em;
     opacity: 0.7;
     height: 30px;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    display: flex;
+    overflow: hidden;
   }
   
   .display__result {
